--- a/ExpirationScanner/ExpirationScanner.csproj
+++ b/ExpirationScanner/ExpirationScanner.csproj
@@ -5,14 +5,11 @@
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
-    <PackageReference Include="Microsoft.Azure.Management.Fluent" Version="1.31.1" />
-    <PackageReference Include="Microsoft.Azure.Management.ResourceManager.Fluent" Version="1.31.1" />
-    <PackageReference Include="Microsoft.Azure.Services.AppAuthentication" Version="1.4.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
-    <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.2" />
-    <PackageReference Include="Microsoft.Graph.Auth" Version="1.0.0-preview.3" />
-    <PackageReference Include="Microsoft.Graph.Beta" Version="0.12.0-preview" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.5" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\ExpirationScanner.Logic\ExpirationScanner.Logic.csproj" />
   </ItemGroup>
   <ItemGroup>
     <None Update="host.json">
