--- a/.github/workflows/functionapp-azure.yml
+++ b/.github/workflows/functionapp-azure.yml
@@ -15,6 +15,8 @@ jobs:
         dotnet-version: 3.1.100
     - name: build
       run: dotnet build -c Release
+    - name: test
+      run: dotnet test -c Release --no-build **/*.Test*.csproj
     - name: publish function
       run: dotnet publish -c Release --no-build ExpirationScanner/ExpirationScanner.csproj -o release/ExpirationScanner
     - uses: actions/upload-artifact@v1
