--- a/ExpirationScanner.Logic/ExpirationScanner.Logic.csproj
+++ b/ExpirationScanner.Logic/ExpirationScanner.Logic.csproj
@@ -11,6 +11,7 @@
       <PackageReference Include="Microsoft.Extensions.Http" Version="3.1.2" />
       <PackageReference Include="Microsoft.Graph.Auth" Version="1.0.0-preview.3" />
       <PackageReference Include="Microsoft.Graph.Beta" Version="0.12.0-preview" />
+      <PackageReference Include="SendGrid" Version="9.13.0" />
     </ItemGroup>
 
 </Project>
