--- a/ExpirationScanner/ExpirationScanner.csproj
+++ b/ExpirationScanner/ExpirationScanner.csproj
@@ -7,6 +7,7 @@
     <PackageReference Include="Microsoft.Azure.Functions.Extensions" Version="1.0.0" />
     <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="3.1.2" />
     <PackageReference Include="Microsoft.NET.Sdk.Functions" Version="3.0.5" />
+    <PackageReference Include="Scrutor" Version="3.2.0" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\ExpirationScanner.Logic\ExpirationScanner.Logic.csproj" />
