--- a/ExpirationScanner/local.settings.json
+++ b/ExpirationScanner/local.settings.json
@@ -3,9 +3,10 @@
     "Values": {
         "AzureWebJobsStorage": "UseDevelopmentStorage=true",
         "AzureWebJobsDashboard": "UseDevelopmentStorage=true",
-        "FUNCTIONS_WORKER_RUNTIME": "dotnet"
+        "FUNCTIONS_WORKER_RUNTIME": "dotnet",
         // fill in your subscription id when running locally (or set environment variable)
         // "SubscriptionId": ""
+        "KeyVaultName": "expiration-scanner"
     },
     "ConnectionStrings": {}
   }
