--- a/.github/workflows/functionapp-azure.yml
+++ b/.github/workflows/functionapp-azure.yml
@@ -53,7 +53,7 @@ jobs:
           inlineScript: |
             cd deploy
             chmod +x deploy.sh
-            ./deploy.sh $ResourceGroup
+            ./deploy.sh $ResourceGroup ${{ secrets.UserObjectId }}
       - uses: azure/functions-action@v1
         with:
           app-name: ${{ env.ResourceGroup }}
